# OTUS_HW_2

./: CMakeLists.txt  README.md  ip_filter2.cpp  main.cpp
.github/workflows/: cmake-single-platform.yml  release.yml
Archive/: ip_filter1.cpp_cvcp  ip_filter2.cpp_cvcp
MakeIP/: CMakeLists.txt  makeip.cpp  makeip.h
comparator/: CMakeLists.txt  comparator.cpp  comparator.h
tests/: CMakeLists.txt  create_header.py  datestamp  globals.py  run.py  script.sh  test_globals.cpp  test_version.cpp  vars.py
version/: CMakeLists.txt  lib.cpp
